# betting-bot

./: .betbot.json  .gitignore  .pre-commit-config.yaml  AUTOMATION_SECRETS_DNS_REFERENCE.md  BETBOT.md  Deep-Research Priorities for a Probability-Driven Betting Agent.docx  Designing a Probability-Driven Trading Bot_ From $10 to Meaningful Outcomes.docx  Makefile  Probability-Driven Trading or Betting Agent With $10 Risk Per Effort.docx  README.md  dashboard.py  dashboard_advanced.py  mypy.ini  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
.betbot/: settings.json
.secrets/: README.md
Check this out Codex/: Kalshi Betting Bot Profitability and Autonomy Upgrade Blueprint.docx  Kalshi Betting Bot ZIP Review and Claude-Delta Upgrade Plan.docx  Profitability, Autonomy, and Self-Improvement Upgrade Report for the Kalshi Betting Bot.docx
betbot/: __init__.py  __main__.py  alpha_scoreboard.py  backtest.py  bayes.py  canonical_universe.py  cli.py  coldmath_replication.py  coldmath_snapshot.py  config.py  decision_matrix_hardening.py  dns_guard.py  domain_models.py  edge.py  guardrails.py  io.py  kalshi_arb_scan.py  kalshi_autopilot.py  kalshi_book.py  kalshi_book_math.py  kalshi_climate_availability.py  kalshi_execution_frontier.py  kalshi_execution_journal.py  kalshi_fees.py  kalshi_focus_dossier.py  kalshi_incentives.py  kalshi_micro_execute.py  kalshi_micro_gate.py  kalshi_micro_ledger.py  kalshi_micro_plan.py  kalshi_micro_prior_execute.py  kalshi_micro_prior_plan.py  kalshi_micro_prior_trader.py  (+64 more)
(+278 files in other folders)
